# Stroke-Prediction-MLOps

./: .gitignore  LICENSE  Makefile  README.md  deployment.yaml  dev-requirements.txt  environment.yml  mlflow.db  prefect.yaml  pyproject.toml  requirements.txt
data/interim/: baseline_stats.json
scripts/: download_data.sh
src/: app.py  data_prep.py  eda.ipynb  monitor.py  promote_model.py  train.py  tune.py
tests/: test_app.py  test_data_prep.py  test_monitor.py
