[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stroke_prediction_mlops"
version = "0.1.0"
description = "An end-to-end MLOps pipeline for stroke prediction"
readme = "README.md"
authors = [
  { name="Selen Parlar", email="parlarselen@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

# Runtime dependencies; keep in sync with requirements.txt
dependencies = [
  "pandas>=2.0",
  "numpy>=1.25",
  "scikit-learn>=1.2",
  "mlflow>=2.9",
  "fastapi>=0.99",
  "uvicorn[standard]>=0.24",
  "prefect>=2.20",
  "joblib>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8>=6.1",
  "black>=23.9",
  "isort>=5.12"
]

[tool.black]
line-length = 88
